08/05/2025 lista paginación, faltan correctos filtrados
lista paginación, faltan correctos filtrados

--- a/views/configuration-panel/departamentos.html
+++ b/views/configuration-panel/departamentos.html
@@ -9,13 +9,13 @@
         <input id="search-bar-departamentos" type="text" placeholder="Buscar departamentos..." onkeypress="cargarDepartamentosTabla()">
     </div>
     <div class="filters">
-        <select id="selectPageSizeDepartamentos" onchange="filterTable(11)">
+        <select id="selectPageSize" onchange="filterTable(11)">
             <option value="5">5 por página</option>
             <option value="10">10 por página</option>
             <option value="25">25 por página</option>
             <option value="50">50 por página</option>
         </select>
-        <select id="estado-filtro-departamentos" onchange="filterTable(11)">
+        <select id="estado-filtro" onchange="filterTable(11)">
             <option value="2">Filtrar por estado</option>
             <option value="1">Activo</option>
             <option value="0">Inactivo</option>
