10/05/2025 listos los filtrados de los departamentos de trabajo
además de eso arreglé el bug de que no filtraba en los puestos de trabajo

--- a/views/configuration-panel/departamentos.html
+++ b/views/configuration-panel/departamentos.html
@@ -6,7 +6,7 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar-departamentos" type="text" placeholder="Buscar departamentos..." onkeypress="cargarDepartamentosTabla()">
+          <input id="search-bar" type="text" onkeypress="filterTable(11)" placeholder="Buscar departamentos de Trabajo...">
     </div>
     <div class="filters">
         <select id="selectPageSize" onchange="filterTable(11)">
