--- a/views/configuration-panel/puestro-trabajo.html
+++ b/views/configuration-panel/puestro-trabajo.html
@@ -5,8 +5,7 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar puestos..." onkeypress="cargarPuestosTrabajo()">
-    </div>
+     <input id="search-bar" type="text" onkeypress="filterTable(10)" placeholder="Buscar puestos de trabajo...">  </div>
     <div class="filters">
         <select id="selectPageSize" onchange="filterTable(10)">
             <option value="5">5 por página</option>
