--- a/views/configuration-panel/departamentos.html
+++ b/views/configuration-panel/departamentos.html
@@ -38,3 +38,19 @@
         <!-- Aquí se cargarán los controles de paginación -->
     </div>
 </div>
+<div id="crearDepartamentoModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="cerrarModal('crearDepartamentoModal', 'crearDepartamentoForm')">&times;</span>
+        <h2 id="modalTitle">Crear Departamento</h2>
+        <form id="crearDepartamentoForm">
+            <label for="nombreDepartamento">Nombre del Departamento:</label>
+            <input type="text" id="nombreDepartamento" name="nombreDepartamento" placeholder="Ingrese el nombre del departamento" required>
+    
+            <label for="descripcionDepartamento">Descripción:</label>
+            <textarea id="descripcionDepartamento" name="descripcionDepartamento" placeholder="Ingrese una descripción del departamento" required></textarea>
+            <p id="errorMessage" style="color: red;"></p>
+    
+            <button type="button" class="close-btn" id="buttonModal" onclick="enviarCreacionDepartamento()">Registrar</button>
+        </form>
+    </div>
+</div>
