--- a/views/comprobantes-pago/comprobantes-pago.html
+++ b/views/comprobantes-pago/comprobantes-pago.html
@@ -6,13 +6,13 @@
         </button>
     </div>
     <div class="search-bar">
-        <input type="text" placeholder="Buscar comprobantes de pago...">
+        <input type="text" placeholder="Buscar comprobantes de pago..." id="searchBar">
     </div>
     <div class="filters">
         <select id="pageFiltro">
-            <option>10 por página</option>
-            <option>25 por página</option>
-            <option>50 por página</option>
+            <option value="10">10 por página</option>
+            <option value="25">25 por página</option>
+            <option value="50">50 por página</option>
         </select>
         <select id="tipoFiltro">
             <option value="2">Seleccionar Estado</option>
