--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -37,7 +37,8 @@
             <button class="menu-item" id="admin-usuarios" onclick="adjuntarHTML('/usuarios/usuarios-admin.html', cargarUsuariosTabla)">Administrar usuarios</button>
             <button class="menu-item" onclick="adjuntarHTML('/configuration-panel/productos-admin.html', () => cargarProductosTabla())">Administrar inventario</button>
             <button class="menu-item" onclick="adjuntarHTML('/factura-view/factura-admin.html', cargarFacturasTabla)">Administrar facturas</button>
-            <button class="menu-item" onclick="adjuntarHTML('/salida-producto/salida-admin.html', cargarSalidasTabla)">Administrar salida de productos</button> <button class="menu-item">Administrar comprobantes de pago</button>
+            <button class="menu-item" onclick="adjuntarHTML('/salida-producto/salida-admin.html', cargarSalidasTabla)">Administrar salida de productos</button> 
+            <button class="menu-item" onclick="adjuntarHTML('/comprobantes-pago/comprobantes-pago.html', cargarComprobantesPagoTabla)">Administrar comprobantes de pago</button>
         </div>
         <div id="inner-div" class="main-content">
 
@@ -49,6 +50,7 @@
     <script src="../../public/js/dashboard-js/productos.js"></script>
     <script src="../../domain/ModuleSelector.js"></script>
     <script src="../../public/js/dashboard-js/cuenta-bancaria.js"></script>
+    <script src="../../public/js/dashboard-js/comprobantes-pago.js"></script>
 </body>
 
 </html>
