--- a/views/comprobantes-pago/comprobantes-pago.html
+++ b/views/comprobantes-pago/comprobantes-pago.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="content-header">
         <h1 class="content-title">Administrar Comprobantes de Pago</h1>
-        <button class="add-receipt-btn" title="Agregar Nuevo Comprobante de Pago">
+        <button class="add-receipt-btn" title="Agregar Nuevo Comprobante de Pago" onclick="desplegarFormCrearComprobante()">
             <span class="material-icons">add_box</span>
         </button>
     </div>
@@ -45,6 +45,35 @@
     <div class="pagination">
     </div>
 </div>
+</div>
+
+
+<div id="crearComprobanteModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="cerrarModal('crearComprobanteModal', 'crearComprobanteForm')">&times;</span>
+        <h2 id="modalTitle"></h2>
+        <form id="crearComprobanteForm" class="editar-producto-form">
+            <input type="hidden" id="idProducto">
+
+            <label for="nombre">Cuenta Bancaria:</label>
+            <select id="cuenta">
+                <option value="0">Seleccionar cuenta Bancaria</option>
+            </select>
+
+            <label for="descripcion">Fecha del comprobante de pago:</label>
+            <input type="date" id="fechaPago" required>
+
+            <label for="numero">Número de comprobante:</label>
+            <input type="text" id="numero" min="0" required>
+
+            <label for="montoComprobante">Monto del comprobante:</label>
+            <input type="number" id="montoComprobante" required>
+
+            <p id="errorMessage" style="color: red;"></p>
+
+            <button type="button" class="close-btn" id="buttonModal" onclick="validarFormularioComprobante()">Guardar Cambios</button>
+        </form>
+    </div>
 </div>
 
 <script>
