--- a/views/comprobantes-pago/comprobantes-pago.html
+++ b/views/comprobantes-pago/comprobantes-pago.html
@@ -47,31 +47,30 @@
 </div>
 </div>
 
-
 <div id="crearComprobanteModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="cerrarModal('crearComprobanteModal', 'crearComprobanteForm')">&times;</span>
         <h2 id="modalTitle"></h2>
-        <form id="crearComprobanteForm" class="editar-producto-form">
-            <input type="hidden" id="idProducto">
+        <form id="crearComprobanteForm" class="editar-comprobante-form">
+            <input type="hidden" id="idComprobante">
 
-            <label for="nombre">Cuenta Bancaria:</label>
+            <label for="cuenta">Cuenta Bancaria:</label>
             <select id="cuenta">
                 <option value="0">Seleccionar cuenta Bancaria</option>
             </select>
 
-            <label for="descripcion">Fecha del comprobante de pago:</label>
+            <label for="fechaPago">Fecha del comprobante de pago:</label>
             <input type="date" id="fechaPago" required>
 
             <label for="numero">Número de comprobante:</label>
             <input type="text" id="numero" min="0" required>
 
             <label for="montoComprobante">Monto del comprobante:</label>
-            <input type="number" id="montoComprobante" required>
+            <input type="number" id="montoComprobante" min="0" required>
 
             <p id="errorMessage" style="color: red;"></p>
 
-            <button type="button" class="close-btn" id="buttonModal" onclick="validarFormularioComprobante()">Guardar Cambios</button>
+            <button type="button" class="close-btn" id="buttonModal">Guardar</button>
         </form>
     </div>
 </div>
