--- a/views/salida-producto/crear-salida.html
+++ b/views/salida-producto/crear-salida.html
@@ -308,6 +308,26 @@
         </form>
     </div>
 </div>
+
+<div id="editarCategoriaModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="cerrarModal('editarCategoriaModal', 'editarCategoriaForm')">&times;</span>
+            <h2 id="modalTitleCategoria"></h2>
+            <form id="editarCategoriaForm" class="editar-proveedor-form">
+                <input type="hidden" id="idCategoria">
+
+                <label for="nombreCategoria">Nombre:</label>
+                <input type="text" id="nombreCategoria" name="nombreCategoria">
+
+                <label for="Descripcion">Descripción:</label>
+                <textarea type="text" id="Descripcion" name="Descripcion" required></textarea>
+
+                <p id="errorMessageCategoria" style="color: red;"></p>
+
+                <button type="button" class="close-btn" id="buttonModalCategoria">Guardar Cambios</button>
+            </form>
+        </div>
+    </div>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         llenarSelectsColaboradores();
