--- a/views/factura-view/editar-factura.html
+++ b/views/factura-view/editar-factura.html
@@ -403,4 +403,23 @@
     </div>
 </div>
 
+<div id="editarCategoriaModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="cerrarModal('editarCategoriaModal', 'editarCategoriaForm')">&times;</span>
+        <h2 id="modalTitleCategoria"></h2>
+        <form id="editarCategoriaForm" class="editar-proveedor-form">
+            <input type="hidden" id="idCategoria">
+
+            <label for="nombreCategoria">Nombre:</label>
+            <input type="text" id="nombreCategoria" name="nombreCategoria">
+
+            <label for="Descripcion">Descripción:</label>
+            <textarea type="text" id="Descripcion" name="Descripcion" required></textarea>
+
+            <p id="errorMessageCategoria" style="color: red;"></p>
+
+            <button type="button" class="close-btn" id="buttonModalCategoria">Guardar Cambios</button>
+        </form>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
